src/main/java/org/example/http/errors/InvalidHttpRequestLineException.java
package org.example.http.errors;

public class InvalidHttpRequestLineException extends InvalidHttpRequestException{
    public InvalidHttpRequestLineException(String errorMessage) {
        super(errorMessage);
    }
}
